tests/format/misc/errors/js/discard-binding/invalid-rest-element-array-pattern.js
{
  var [ ...void ] = [];
}
{
  for (var [...void] of [[]]);
}
